--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  
+  extended_image: ^8.1.1
+  flutter_config: ^2.0.2
+  provider: ^6.0.5
   http: ^1.1.0
 
 dev_dependencies:
